[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game/GUI/UpgradeNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/GUI/Shop.gd" type="Script" id=2]
[ext_resource path="res://Game/GUI/fish4.png" type="Texture" id=3]
[ext_resource path="res://Game/GUI/Theme.tres" type="Theme" id=4]
[ext_resource path="res://Game/GUI/UpgradeNode.gd" type="Script" id=5]
[ext_resource path="res://Game/GUI/upgrade-unchecked.png" type="Texture" id=6]
[ext_resource path="res://Game/GUI/upgrade-checked.png" type="Texture" id=7]
[ext_resource path="res://Game/GUI/back-arrow.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Shop" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
custom_constants/separation = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_right = 94.0
margin_bottom = 9.0

[node name="BackButton" type="Button" parent="HBoxContainer2"]
margin_right = 9.0
margin_bottom = 9.0
focus_mode = 0
theme = ExtResource( 4 )
enabled_focus_mode = 0
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_left = 13.0
margin_right = 94.0
margin_bottom = 9.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "Shop"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 13.0
margin_right = 94.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="MoneyLabel" type="Label" parent="HBoxContainer"]
margin_right = 94.0
margin_bottom = 9.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "     x500"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MoneyLabel"]
margin_left = 3.0
margin_top = 2.0
margin_right = 10.0
margin_bottom = 11.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row5" type="HBoxContainer" parent="."]
margin_top = 26.0
margin_right = 94.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3
custom_constants/separation = 2

[node name="Row4" type="HBoxContainer" parent="."]
visible = false
margin_top = 26.0
margin_right = 94.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="Cats" type="VBoxContainer" parent="Row4"]
margin_right = 94.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Row4/Cats"]
margin_right = 94.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="Label" type="Label" parent="Row4/Cats/Panel"]
margin_top = 1.0
margin_right = 94.0
margin_bottom = 8.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0.152941, 0.152941, 0.266667, 1 )
text = "cats"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Row4/Cats/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_right = -1.0
margin_bottom = -103.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Row4/Cats/Panel/HBoxContainer"]
margin_right = 18.0
margin_bottom = 6.0
size_flags_horizontal = 3
texture = ExtResource( 7 )
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Row4/Cats/Panel/HBoxContainer"]
margin_left = 18.0
margin_right = 37.0
margin_bottom = 6.0
size_flags_horizontal = 3
texture = ExtResource( 6 )
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="Row4/Cats/Panel/HBoxContainer"]
margin_left = 37.0
margin_right = 55.0
margin_bottom = 6.0
size_flags_horizontal = 3
texture = ExtResource( 6 )
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="Row4/Cats/Panel/HBoxContainer"]
margin_left = 55.0
margin_right = 74.0
margin_bottom = 6.0
size_flags_horizontal = 3
texture = ExtResource( 6 )
stretch_mode = 4

[node name="TextureRect5" type="TextureRect" parent="Row4/Cats/Panel/HBoxContainer"]
margin_left = 74.0
margin_right = 93.0
margin_bottom = 6.0
size_flags_horizontal = 3
texture = ExtResource( 6 )
stretch_mode = 4

[node name="Button" type="Button" parent="Row4/Cats/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 15.0
margin_right = -3.0
margin_bottom = -2.0
focus_mode = 0
theme = ExtResource( 4 )
enabled_focus_mode = 0
text = "x500 "
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Row4/Cats/Panel/Button"]
margin_left = 7.0
margin_top = 2.0
margin_right = 14.0
margin_bottom = 7.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row" type="HBoxContainer" parent="."]
margin_top = 40.0
margin_right = 94.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="MilkPower" parent="Row" instance=ExtResource( 1 )]
margin_right = 46.0
margin_bottom = 27.0

[node name="MilkSpawn" parent="Row" instance=ExtResource( 1 )]
margin_left = 48.0
margin_bottom = 27.0

[node name="Panel" parent="Row/MilkSpawn" index="0"]
margin_right = 46.0
margin_bottom = 27.0

[node name="Label" parent="Row/MilkSpawn/Panel" index="0"]
margin_left = 2.0
text = "milk spwn"

[node name="TextureRect" parent="Row/MilkSpawn/Panel/HBoxContainer" index="0"]
margin_right = 11.0
margin_bottom = 6.0

[node name="TextureRect2" parent="Row/MilkSpawn/Panel/HBoxContainer" index="1"]
margin_left = 11.0
margin_right = 22.0
margin_bottom = 6.0

[node name="TextureRect3" parent="Row/MilkSpawn/Panel/HBoxContainer" index="2"]
margin_left = 22.0
margin_right = 33.0
margin_bottom = 6.0

[node name="TextureRect4" parent="Row/MilkSpawn/Panel/HBoxContainer" index="3"]
margin_left = 33.0
margin_right = 45.0
margin_bottom = 6.0

[node name="Row2" type="HBoxContainer" parent="."]
margin_top = 71.0
margin_right = 94.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="Magnet" parent="Row2" instance=ExtResource( 1 )]
margin_right = 46.0
margin_bottom = 27.0

[node name="Panel" parent="Row2/Magnet" index="0"]
margin_right = 46.0
margin_bottom = 27.0

[node name="Label" parent="Row2/Magnet/Panel" index="0"]
text = "magnet"

[node name="TextureRect" parent="Row2/Magnet/Panel/HBoxContainer" index="0"]
margin_right = 11.0
margin_bottom = 6.0

[node name="TextureRect2" parent="Row2/Magnet/Panel/HBoxContainer" index="1"]
margin_left = 11.0
margin_right = 22.0
margin_bottom = 6.0

[node name="TextureRect3" parent="Row2/Magnet/Panel/HBoxContainer" index="2"]
margin_left = 22.0
margin_right = 33.0
margin_bottom = 6.0

[node name="TextureRect4" parent="Row2/Magnet/Panel/HBoxContainer" index="3"]
margin_left = 33.0
margin_right = 45.0
margin_bottom = 6.0

[node name="FishSpawn" parent="Row2" instance=ExtResource( 1 )]
margin_left = 48.0
margin_bottom = 27.0

[node name="Panel" parent="Row2/FishSpawn" index="0"]
margin_right = 46.0
margin_bottom = 27.0

[node name="Label" parent="Row2/FishSpawn/Panel" index="0"]
margin_left = 1.0
text = "fish spwn"

[node name="TextureRect" parent="Row2/FishSpawn/Panel/HBoxContainer" index="0"]
margin_right = 11.0
margin_bottom = 6.0

[node name="TextureRect2" parent="Row2/FishSpawn/Panel/HBoxContainer" index="1"]
margin_left = 11.0
margin_right = 22.0
margin_bottom = 6.0

[node name="TextureRect3" parent="Row2/FishSpawn/Panel/HBoxContainer" index="2"]
margin_left = 22.0
margin_right = 33.0
margin_bottom = 6.0

[node name="TextureRect4" parent="Row2/FishSpawn/Panel/HBoxContainer" index="3"]
margin_left = 33.0
margin_right = 45.0
margin_bottom = 6.0

[node name="Button" parent="Row2/FishSpawn/Panel" index="2"]
disabled = true

[node name="Row3" type="HBoxContainer" parent="."]
margin_top = 102.0
margin_right = 94.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="CatapultSize" parent="Row3" instance=ExtResource( 1 )]
margin_right = 46.0
margin_bottom = 28.0

[node name="Panel" parent="Row3/CatapultSize" index="0"]
margin_right = 46.0
margin_bottom = 28.0

[node name="Label" parent="Row3/CatapultSize/Panel" index="0"]
text = "ctplt size"

[node name="TextureRect" parent="Row3/CatapultSize/Panel/HBoxContainer" index="0"]
margin_right = 11.0
margin_bottom = 6.0

[node name="TextureRect2" parent="Row3/CatapultSize/Panel/HBoxContainer" index="1"]
margin_left = 11.0
margin_right = 22.0
margin_bottom = 6.0

[node name="TextureRect3" parent="Row3/CatapultSize/Panel/HBoxContainer" index="2"]
margin_left = 22.0
margin_right = 33.0
margin_bottom = 6.0

[node name="TextureRect4" parent="Row3/CatapultSize/Panel/HBoxContainer" index="3"]
margin_left = 33.0
margin_right = 45.0
margin_bottom = 6.0

[node name="TextureRect" parent="Row3/CatapultSize/Panel/Button" index="0"]
margin_top = 3.0
margin_bottom = 8.0

[node name="CatapultPower" parent="Row3" instance=ExtResource( 1 )]
margin_left = 48.0
margin_bottom = 28.0

[node name="Panel" parent="Row3/CatapultPower" index="0"]
margin_right = 46.0
margin_bottom = 28.0

[node name="Label" parent="Row3/CatapultPower/Panel" index="0"]
margin_left = 1.0
text = "ctplt pwr"

[node name="TextureRect" parent="Row3/CatapultPower/Panel/HBoxContainer" index="0"]
margin_right = 11.0
margin_bottom = 6.0

[node name="TextureRect2" parent="Row3/CatapultPower/Panel/HBoxContainer" index="1"]
margin_left = 11.0
margin_right = 22.0
margin_bottom = 6.0

[node name="TextureRect3" parent="Row3/CatapultPower/Panel/HBoxContainer" index="2"]
margin_left = 22.0
margin_right = 33.0
margin_bottom = 6.0

[node name="TextureRect4" parent="Row3/CatapultPower/Panel/HBoxContainer" index="3"]
margin_left = 33.0
margin_right = 45.0
margin_bottom = 6.0

[node name="TextureRect" parent="Row3/CatapultPower/Panel/Button" index="0"]
margin_top = 3.0
margin_bottom = 8.0

[node name="Row6" type="HBoxContainer" parent="."]
margin_top = 134.0
margin_right = 94.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3
custom_constants/separation = 2
[connection signal="pressed" from="HBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Row4/Cats/Panel/Button" to="Row4/Cats" method="_on_Button_pressed"]

[editable path="Row/MilkSpawn"]

[editable path="Row2/Magnet"]

[editable path="Row2/FishSpawn"]

[editable path="Row3/CatapultSize"]

[editable path="Row3/CatapultPower"]
